fixed levenstein distance as well as types. updated dict